Superadmin creeps penempatan dropdown filter studio, pengubahan model inventory studio dan therapist, dan btn-md untuk portlet toolbar

--- a/user_superadmin/inventory_studio_detail.html
+++ b/user_superadmin/inventory_studio_detail.html
@@ -343,10 +343,13 @@ License: You must have a valid license purchased only from themeforest(the above
 										<a href="user_superadmin/inventory_studio.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
 										<span class="kt-subheader__breadcrumbs-separator"></span>
 										<a href="user_superadmin/inventory_studio.html" class="kt-subheader__breadcrumbs-link">
-											Inventory Studio </a>
-                                        <span class="kt-subheader__breadcrumbs-separator"></span>
+											Inventory studio </a>
+										<span class="kt-subheader__breadcrumbs-separator"></span>
+										<a href="user_superadmin/inventory_studio_view.html" class="kt-subheader__breadcrumbs-link">
+											Studio Cabang Hasanuddin </a>
+										<span class="kt-subheader__breadcrumbs-separator"></span>
 										<a href="user_superadmin/inventory_studio_detail.html" class="kt-subheader__breadcrumbs-link">
-											Detail Inventory Studio </a>
+											Detail Inventory </a>
 									</div>
 								</div>
 							</div>
