--- a/user_superadmin/inventory_therapist.html
+++ b/user_superadmin/inventory_therapist.html
@@ -343,16 +343,10 @@ License: You must have a valid license purchased only from themeforest(the above
 										<a href="user_superadmin/inventory_therapist.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
 										<span class="kt-subheader__breadcrumbs-separator"></span>
 										<a href="user_superadmin/inventory_therapist.html" class="kt-subheader__breadcrumbs-link">
-											Inventory therapist </a>
+											Inventory Therapist </a>
 									</div>
 								</div>
 								<div class="kt-subheader__toolbar">
-									<select class="form-control kt-select2" id="filter_therapist" name="filter_therapist" style="min-width: 250px">
-										<option></option>
-										<option value="Ica">Ica</option>
-										<option value="Vega">Vega</option>
-										<option value="Darnilla">Darnilla</option>
-									</select>
 								</div>
 							</div>
 						</div>
@@ -379,7 +373,6 @@ License: You must have a valid license purchased only from themeforest(the above
 											</div>
 										</div>
 										<div class="kt-portlet__body">
-
                                             <table class="table table-bordered table-hover table-checkable" id="table_inventory_therapist"></table>
 										</div>
 									</div>
