--- a/user_superadmin/hr_karyawan.html
+++ b/user_superadmin/hr_karyawan.html
@@ -347,14 +347,7 @@ License: You must have a valid license purchased only from themeforest(the above
 									</div>
 								</div>
 								<div class="kt-subheader__toolbar">
-									<select class="form-control kt-select2" id="filter_studio" name="filter_studio" style="min-width: 250px">
-										<option></option>
-										<option>Studio Cabang Hasanuddin</option>
-										<option>Studio Cabang Dg. Tata</option>
-										<option>Studio Cabang Hasanuddin</option>
-										<option>Studio Cabang Dg. Tata</option>
-										<option>Studio Cabang Hasanuddin</option>
-									</select>
+
 								</div>
 							</div>
 						</div>
@@ -380,7 +373,15 @@ License: You must have a valid license purchased only from themeforest(the above
 												</h3>
 											</div>
 											<div class="kt-portlet__head-toolbar">
-												<a href="user_superadmin/hr_karyawan_new.html" class="btn btn-sm btn-success" data-toggle="modal" data-target="#kt_modal_karyawan_tambah"><i class="flaticon2-user" style="color: white;"></i> Tambah Karyawan</a>
+												<select class="form-control kt-select2" id="filter_studio" name="filter_studio">
+													<option></option>
+													<option>Studio Cabang Hasanuddin</option>
+													<option>Studio Cabang Dg. Tata</option>
+													<option>Studio Cabang Hasanuddin</option>
+													<option>Studio Cabang Dg. Tata</option>
+													<option>Studio Cabang Hasanuddin</option>
+												</select>
+												<a href="user_superadmin/hr_karyawan_new.html" class="btn btn-md btn-success kt-margin-l-10" data-toggle="modal" data-target="#kt_modal_karyawan_tambah"><i class="flaticon2-user" style="color: white;"></i> Tambah Karyawan</a>
 											</div>
 										</div>
 										<div class="kt-portlet__body">
