--- a/user_superadmin/hr_laporan.html
+++ b/user_superadmin/hr_laporan.html
@@ -345,16 +345,6 @@ License: You must have a valid license purchased only from themeforest(the above
 											Laporan karyawan </a>
 									</div>
 								</div>
-								<div class="kt-subheader__toolbar">
-									<select class="form-control kt-select2" id="filter_studio" name="filter_studio" style="min-width: 250px">
-										<option></option>
-										<option>Studio Cabang Hasanuddin</option>
-										<option>Studio Cabang Dg. Tata</option>
-										<option>Studio Cabang Hasanuddin</option>
-										<option>Studio Cabang Dg. Tata</option>
-										<option>Studio Cabang Hasanuddin</option>
-									</select>
-								</div>
 							</div>
 						</div>
 
@@ -364,7 +354,7 @@ License: You must have a valid license purchased only from themeforest(the above
 						<div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
 
 							<div class="kt-portlet kt-portlet--mobile">
-								<div class="kt-portlet__head centered-content">
+								<div class="kt-portlet__head">
 									<div class="kt-portlet__head-label">
 										<span class="kt-portlet__head-icon">
 											<i class="flaticon2-cube-1"></i>
@@ -372,6 +362,16 @@ License: You must have a valid license purchased only from themeforest(the above
 										<h3 class="kt-portlet__head-title">
 											Laporan Karyawan</span>
 										</h3>
+									</div>
+									<div class="kt-portlet__head-toolbar">
+										<select class="form-control kt-select2" id="filter_studio" name="filter_studio">
+											<option></option>
+											<option>Studio Cabang Hasanuddin</option>
+											<option>Studio Cabang Dg. Tata</option>
+											<option>Studio Cabang Hasanuddin</option>
+											<option>Studio Cabang Dg. Tata</option>
+											<option>Studio Cabang Hasanuddin</option>
+										</select>
 									</div>
 								</div>
 							</div>
