--- a/user_superadmin/hr_request_dayoff.html
+++ b/user_superadmin/hr_request_dayoff.html
@@ -346,16 +346,6 @@ License: You must have a valid license purchased only from themeforest(the above
 											Request day-off </a>
 									</div>
 								</div>
-								<div class="kt-subheader__toolbar">
-									<select class="form-control kt-select2" id="filter_studio" name="filter_studio" style="min-width: 250px">
-										<option></option>
-										<option>Studio Cabang Hasanuddin</option>
-										<option>Studio Cabang Dg. Tata</option>
-										<option>Studio Cabang Hasanuddin</option>
-										<option>Studio Cabang Dg. Tata</option>
-										<option>Studio Cabang Hasanuddin</option>
-									</select>
-								</div>
 							</div>
 						</div>
 
@@ -378,6 +368,16 @@ License: You must have a valid license purchased only from themeforest(the above
 												<h3 class="kt-portlet__head-title">
 													Request Day-Off
 												</h3>
+											</div>
+											<div class="kt-portlet__head-toolbar">
+												<select class="form-control kt-select2" id="filter_studio" name="filter_studio">
+													<option></option>
+													<option>Studio Cabang Hasanuddin</option>
+													<option>Studio Cabang Dg. Tata</option>
+													<option>Studio Cabang Hasanuddin</option>
+													<option>Studio Cabang Dg. Tata</option>
+													<option>Studio Cabang Hasanuddin</option>
+												</select>
 											</div>
 										</div>
 										<div class="kt-portlet__body">
