--- a/user_superadmin/md_kategori_treatment.html
+++ b/user_superadmin/md_kategori_treatment.html
@@ -370,7 +370,7 @@ License: You must have a valid license purchased only from themeforest(the above
 												</h3>
 											</div>
                                             <div class="kt-portlet__head-toolbar">
-												<button type="button" class="btn btn-sm btn-success" data-toggle="modal" data-target="#kt_modal_tambah_kategori_treatment"><i class="flaticon-plus" style="color: white;"></i> Tambah Kategori Treatment</button>
+												<button type="button" class="btn btn-md btn-success" data-toggle="modal" data-target="#kt_modal_tambah_kategori_treatment"><i class="flaticon-plus" style="color: white;"></i> Tambah Kategori Treatment</button>
 											</div>
 										</div>
 										<div class="kt-portlet__body">
