--- a/user_superadmin/treatment_paid.html
+++ b/user_superadmin/treatment_paid.html
@@ -347,14 +347,6 @@ License: You must have a valid license purchased only from themeforest(the above
 									</div>
 								</div>
 								<div class="kt-subheader__toolbar">
-									<select class="form-control kt-select2" id="filter_studio" name="filter_studio" style="min-width: 250px">
-										<option></option>
-										<option>Studio Cabang Hasanuddin</option>
-										<option>Studio Cabang Dg. Tata</option>
-										<option>Studio Cabang Hasanuddin</option>
-										<option>Studio Cabang Dg. Tata</option>
-										<option>Studio Cabang Hasanuddin</option>
-									</select>
 								</div>
 							</div>
 						</div>
@@ -378,6 +370,16 @@ License: You must have a valid license purchased only from themeforest(the above
 												<h3 class="kt-portlet__head-title">
 													Paid Treatments
 												</h3>
+											</div>
+											<div class="kt-portlet__head-toolbar">
+												<select class="form-control kt-select2" id="filter_studio" name="filter_studio">
+													<option></option>
+													<option>Studio Cabang Hasanuddin</option>
+													<option>Studio Cabang Dg. Tata</option>
+													<option>Studio Cabang Hasanuddin</option>
+													<option>Studio Cabang Dg. Tata</option>
+													<option>Studio Cabang Hasanuddin</option>
+												</select>
 											</div>
 										</div>
 										<div class="kt-portlet__body">
